Fix for table content overflowing on top of header

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ body {
 
 .pseudoDivWrapper {
 	background-color: #555;
+	z-index: 900;
 }
 
 .pseudoHeader {
